ui/deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  labels:
    app: "chuck-ui"
  name: "chuck-ui"
  namespace: chuck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "chuck-ui"
  template:
    metadata:
      labels:
        app: "chuck-ui"
        version: v1
    spec:
      containers:
      - name: "chuck-ui"
        image: "docker.io/dimssss/chuck-ui:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
